objects/Final_Grade__c/validationRules/Weighted_GPA_is_within_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Weighted_GPA_is_within_range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Weighted_GPA__c &lt; 0, Weighted_GPA__c &gt;= 10)</errorConditionFormula>
    <errorDisplayField>Weighted_GPA__c</errorDisplayField>
    <errorMessage>The weighted GPA cannot be greater than 10 or less than 0.</errorMessage>
</ValidationRule>