objects/Final_Grade__c/listViews/All_Final_Grades.listView-meta.xml
<ListView>
    <fullName>All_Final_Grades</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course__c</columns>
    <columns>Show_in_Portal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Final Grades</label>
</ListView>